criação da tela de gráfico de consumo por mês

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".visao.MedidoresActivity">
+        <activity android:name=".visao.MedidoresActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".visao.ConsumoActivity"></activity>
+        <activity android:name=".visao.ConsumoActivity"
+                    android:parentActivityName=".visao.MedidoresActivity"
+                    android:screenOrientation="landscape">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".visao.MedidoresActivity" />
+        </activity>
     </application>
 
 </manifest>
